# RCade

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
.github/workflows/: deploy-web.yaml  publish-cli.yaml  release-cabinet.yaml
.husky/: pre-push
action-deploy/: .gitignore  README.md  action.yaml  package.json  tsconfig.json
action-deploy/src/: api-client.ts  bucket.ts  index.ts  wait.ts
api/: README.md  package.json
api/src/: categories.ts  index.ts  manifest.ts  plugins.ts  schema.ts
api/src/detect/: detector.ts  index.ts
api/src/game/: manifest.ts  version.ts
api/src/plugin/: index.ts  manifest.ts
cabinet/: README.md  package.json
cabinet/scripts/: install-service.sh
cabinet/src/main/: args.ts  main.ts  preload.ts
cabinet/src/plugins/: index.ts
cabinet/src/plugins/rcade-input-classic/: index.ts
cabinet/src/renderer/: App.svelte  router.svelte.ts
cabinet/src/renderer/pages/: CarouselPage.svelte  GamePage.svelte
cabinet/src/shared/: types.ts
cli/: README.md  bin.ts  index.ts  package.json
cli/src/: dev.ts  index.ts  remix.ts
cli/templates/p5-js/: README.md
cli/templates/p5-ts/: README.md
cli/templates/vanilla-js/: README.md
cli/templates/vanilla-rs/: Cargo.toml  README.md
cli/templates/vanilla-ts/: README.md
create/: README.md  package.json
firmware/input-classic-controller/: Cargo.toml  Justfile  README.md  build.rs
firmware/input-classic-controller/.cargo/: config.toml
firmware/input-classic-controller/src/: main.rs
plugins/input-classic/: README.md  bun.lockb  index.ts  package.json  rcade.manifest.json
plugins/input-classic/clients/rust/: Cargo.toml
plugins/input-classic/clients/typescript/: README.md  index.ts  package.json
plugins/input-classic/rust/: Cargo.toml
plugins/input-classic/rust/src/: worker.js
plugins/input-classic/typescript/: bun.lockb  package.json
plugins/input-spinners/clients/typescript/: README.md  index.ts  package.json
runtime/: README.md
sdk/backend/: README.md  index.ts  package.json
sdk/frontend/rust/: Cargo.toml
sdk/frontend/rust/src/: channel.rs
sdk/frontend/rust/src/shmem_runner/: worker.js
sdk/frontend/typescript/: README.md  bun.lockb  package.json
sdk/rust/: Cargo.toml
sdk/rust/src/: channel.rs  lib.rs
sdk/rust/src/shmem_runner/: guard.rs  mod.rs
sdk/typescript/: README.md  package.json
web/: README.md  bad_decisions.md  schema.sql  wrangler.toml
web/bruno/rcade-api/: Deploy a Game.bru  Deploy a Plugin.bru  Get All Plugins.bru  Get Specific Plugin.bru
web/drizzle/migrations/: 0008_silent_shockwave.sql  0009_curved_mister_fear.sql  0010_clear_mongu.sql  0011_oval_bulldozer.sql  0013_clammy_giant_girl.sql  0014_little_shinko_yamashiro.sql
web/src/lib/: cache.ts  game.ts  plugin.ts
web/src/lib/auth/: github.ts  (+1 more)
(+20 files in other folders)
