[package]
name = "input-classic-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.4", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embedded-io-async = "0.6"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = 1
