[package]
homepage = "https://rcade.recurse.com"
name = "rcade-plugin-input-classic"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The Recurse RCade 'Classic' Input Plugin"
repository = "https://github.com/fcjr/RCade"

[dependencies]
js-sys = "0.3.83"
rcade-sdk = "0.1.0"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["console"] }
