[package]
homepage = "https://rcade.recurse.com"
name = "rcade-sdk"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "The Recurse RCade SDK"
repository = "https://github.com/fcjr/RCade"

[dependencies]
hashbrown = "0.16.1"
js-sys = { version = "0.3.83", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4.56", default-features = false }
web-sys = { version = "0.3.83", default-features = false, features = [
    "Blob",
    "BlobPropertyBag",
    "MessageEvent",
    "MessagePort",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
] }
